--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Run Cypress tests
-      run: npm run cy:run
+      run: npm run Regression
 
     - name: Generate Allure Report
       run: npx allure generate --clean -o allure-report
